// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`class declaration (1) - empty method 1`] = `
"<script lang="ts">
  class BaseQueue
  {
    onFlush()
    {}

    onFlushFail()
    {}

    onFlushSuccess()
    {}
  }
</script>
"
`;

exports[`class declaration (2) - static things 1`] = `
"<script lang="ts">
  class ClassWithStatic
  {
    static staticMethod()
    {}
    static
    {}
  }
</script>
"
`;

exports[`destructuring assignment with default value 1`] = `
"<script lang="ts">
  const renderComponent = ({ handleSubmit = () =>
  {}, errors }) =>
  {
    return null;
  };
</script>
"
`;

exports[`do...while 1`] = `
"<script lang="ts">
  do
  {} while (i < 5);
</script>
"
`;

exports[`for 1`] = `
"<script lang="ts">
  for (let i = 0; i < 9; i++)
  {}
</script>
"
`;

exports[`if...elseif...else 1`] = `
"<script lang="ts">
  if (foo)
  {
  }
  else if (baz)
  {
  }
  else
  {
  }
</script>
"
`;

exports[`labeled block 1`] = `
"<script lang="ts">
  foo:
  {
  }
</script>
"
`;

exports[`object assignment 1`] = `
"<script lang="ts">
  const foo = {
    bar: {},
  };
</script>
"
`;

exports[`switch (1) 1`] = `
"<script lang="ts">
  switch (expr)
  {
  }
</script>
"
`;

exports[`switch (2) - case with block 1`] = `
"<script lang="ts">
  switch (action)
  {
    case "say_hello":
    {
    }
    case "say_hi":
    {
    }
    default:
    {
    }
  }
</script>
"
`;

exports[`try...catch...finally 1`] = `
"<script lang="ts">
  try
  {
  }
  catch (ex)
  {
  }
  finally
  {
  }
</script>
"
`;

exports[`while 1`] = `
"<script lang="ts">
  while (n < 3)
  {}
</script>
"
`;
